# file-cacher

./: Cargo.toml  README.md  build.rs  build.sh  install.sh
src/: cli.rs  config.rs  lib.rs  main.rs
