[package]
name = "file-cacher"
description = "URL file cache from the cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.3.19", features = ["derive"] }
rand = "0.8.5"
reqwest = "0.11.18"
serde = { version = "1.0.174", features = ["serde_derive", "derive"] }
serde_json = "1.0.103"
tokio = {version="1.29.1", features=["full"]}
