[package]
name = "file-cacher"
version = "0.1.0"
edition = "2021"
author = "cr3eperall"
description = "Cli utility to retrieve files from the web with a cache"
build = "build.rs"

[profile.release]
strip = true
lto = true

[dependencies]
bytes = "1.4.0"
clap = { version = "4.3.19", features = ["derive"] }
rand = "0.8.5"
reqwest = "0.11.18"
serde = { version = "1.0.174", features = ["serde_derive", "derive"] }
serde_json = "1.0.103"
tokio = {version="1.29.1", features=["full"]}
anyhow = "1.0.75"

[build-dependencies]
clap = {version = "4.3.19", features = ["derive"] }
clap_complete = "4.3.2"